@@ -90,6 +90,7 @@ Fixed
 - Fix for tab indicators getting lost when moving tabs
 - Fixed handling of backspace in number hinting mode
 - Fixed `FileNotFoundError` when starting in some cases on old Qt versions
+- Fixed sharing of cookies between tabs when `private-browsing` is enabled
 
 v0.6.2
 ------
